# XRD-preprocessing

./: .gitignore  README.md  convert_gfrm_to_npy.py  environment.yml  gfrm_convert.py  pyproject.toml  requirements.txt
examples/: faulty_pixel_detection_demo.py  gfrm_converter_demo.py  h5_session_filter_demo.py  product_gfrm_preprocessing_pipeline.py  product_pipeline_helpers.py  water_faulty_pixel_integration_demo.py
examples/data/: baseline_faulty_pixel_mask.npy  baseline_faulty_pixels.npy  poni_coords_for_all.poni
src/xrd_preprocessing/: __init__.py  _compat.py  agbh.py  artifacts.py  azimuthal.py  config.py  faulty_pixels.py  filter_ops.py  filters.py  gfrm.py  h5.py  hot_pixels.py  normalization.py  numeric.py  pipeline.py  product_transformers.py  snapshots.py  snr.py
src/xrd_preprocessing/configs/: __init__.py  preprocessing_branch_config_template.yaml  preprocessing_config_template.yaml
src/xrd_preprocessing/docs/: README.md  agbh_monochromaticity.md  azimuthal_integration.md  container_raw_gfrm_requirement.md  faulty_pixels.md  filters.md  gfrm_converter.md  h5_session_filters.md  h5_to_df.md  normalization.md  pipeline.md  product_development_questions.md  snapshots.md  snr.md
src/xrd_preprocessing/transformers/: __init__.py  h5.py  (+3 more)
tests/: test_agbh_monochromaticity.py  test_azimuthal_import.py  test_faulty_pixels.py  test_filters.py  test_gfrm.py  test_h5_helpers.py  test_h5_v03.py  test_normalization.py  test_parity_xrd_analysis.py  test_pipeline_builder.py  test_preprocessing_config.py  test_product_transformers.py  test_snapshots.py  test_snr.py
