[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "xrd-preprocessing"
version = "0.1.2b0"
description = "Lightweight XRD preprocessing utilities for EOS products."
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [{ name = "EOS" }]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2",
  "scipy>=1.14",
  "scikit-learn>=1.5",
  "joblib>=1.4",
  "PyYAML>=6.0",
  "h5py>=3.12",
  "pyFAI>=2025.1",
  "fabio>=2025.10",
  "marimo>=0.10",
  "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.8",
  "opencv-python-headless>=4.13",
  "scikit-image>=0.26",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xrd_preprocessing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 88
target-version = "py313"
